Atualizaçao index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/icon-page/brasil.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" type="">
     <title>Booking.com | Site Oficial | Os melhores hotéis, voos, alugueis de carro de acomodações
-
     </title>
 </head>
 <body>
@@ -341,14 +341,14 @@
                      <a href="https://www.booking.com/searchresults.html?aid=397594">
                         <img src="https://cf.bstatic.com/xdata/images/hotel/square200/74594395.webp?k=671d67306055666b840b6b4d37b7b00202eca711ab78218e037da48a4d0c77c3&o=&s=1" alt="Split"><!--esta eu fiz por link da img no site-->
                         <div>                           
-                            <h5></h5>
-                            <p></p>
-                            <p><strong></strong></p>
+                            <h5>7Seasons Apartments Budapest</h5>
+                            <p>06. Terézváros, Hungria, Budapest</p>
+                            <p>A partir de <strong>R$ 684</strong></p>
                         </div>
                         <div>
-                            <span></span>
-                            <span></span>
-                            <span></span>
+                            <span>8.8</span>
+                            <span>Fabuloso</span>
+                            <span>6.967 avaliações</span>
                         </div>
                      </a>
                   </li>
@@ -356,14 +356,14 @@
                     <a href="https://www.booking.com/searchresults.html?aid=397594">
                         <img src="assets/casas_E_Aps/p&j.webp" alt="cracovia">
                         <div>                           
-                            <h5></h5>
-                            <p></p>
-                            <p><strong></strong></p>
+                            <h5>3 epoques Apartments by Prague Residences</h5>
+                            <p>Praga 1, República Tcheca, Praha 1</p>
+                            <p>A partir de <strong>R$ 522</strong></p>
                         </div>
                         <div>
-                            <span></span>
-                            <span></span>
-                            <span></span>
+                            <span>8.8</span>
+                            <span>Fabuloso</span>
+                            <span>414 avaliações</span>
                         </div>
                     </a>
                  </li>
