--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/icon-page/brasil.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css" type="">
+    <link rel="stylesheet" href="style.css" >
     <title>Booking.com | Site Oficial | Os melhores hotéis, voos, alugueis de carro de acomodações
     </title>
 </head>
