--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </a>
                 </button>
             </li>
-            <li>
+            <li class="app-banner">
                 <div>
                     <h4>Sua viagem em um só app</h4>
                     <p>Encontre o melhor em estadias, voos e muito mais no app
