--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
         </ul>
     </article>
 
-    <section>
+    <section class="container destinations">
         <h2>Conheça o Brasil</h2>
         <p>Estes destinos incríveis têm muito a oferecer</p>
 
-        <ul>
+        <ul class="list">
             <li>
                 <a href="https://www.booking.com/searchresults.pt-br.html">
                     <img src="assets/destinos/rio-janeiro.webp" alt="Rio de Janeiro">
