Aula dia 09/11 aula que faltei dia de jogo

--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
             </li>
         </ul>
     </section>
-    <section>
+    <section class="container plan">
         <h2>Planejar sua viagem ficou fácil e rápido</h2>
         <p>Escolha uma opção e confira os principais destinos no Brasil</p>
 
-        <ul>
+        <ul class="menu-filter">
             <li>
                 <img src="assets/icons/coracao.svg">
                 <span>Romance</span>
@@ -238,7 +238,7 @@
             </li>
         </ul>
         <div>
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="https://www.booking.com/searchresults.html?aid=397594">
                         <img src="assets/destinos/santo-andre.jpeg" alt="Santo André">
@@ -296,7 +296,7 @@
             </ul>
         </div>
     </section>
-    <section>
+    <section class="container residences">
         <div>
             <h2>Casas e apartamentos que os hóspedes amam</h2>
             <button>
@@ -306,10 +306,10 @@
             </button>
         </div>
         <div>
-            <ul>
+            <ul class="list list-residences">
                 <li>
                     <a href="https://www.booking.com/searchresults.html?aid=397594">
-                        <img src="assets/acomodacoes/prague-residence.webp" alt="Prague residence">
+                        <img src="assets/apartamentos/01.webp" alt="Prague residence">
                         <div>
                             <h5>6 Continents Apartments by Prague</h5>
                             <p>Praga 1, República Tcheca, Prague</p>
@@ -324,7 +324,7 @@
                 </li>
                 <li>
                     <a href="https://www.booking.com/searchresults.html?aid=397594">
-                        <img src="assets/acomodacoes/budapest.webp" alt="Budapest">
+                        <img src="assets/apartamentos/02.webp" alt="Budapest">
                         <div>
                             <h5>7Seasons Apartments Budapest</h5>
                             <p>06. Terézváros, Hungria, Budapest</p>
@@ -339,7 +339,7 @@
                 </li>
                 <li>
                     <a href="https://www.booking.com/searchresults.html?aid=397594">
-                        <img src="assets/acomodacoes/miasto.webp" alt="Miasto">
+                        <img src="assets/apartamentos/03.webp" alt="Miasto">
                         <div>
                             <h5>7Seasons Apartments Budapest</h5>
                             <p>06. Terézváros, Hungria, Budapest</p>
@@ -354,7 +354,7 @@
                 </li>
                 <li>
                     <a href="https://www.booking.com/searchresults.html?aid=397594">
-                        <img src="assets/acomodacoes/prague-apatments.webp" alt="Prague apartaments">
+                        <img src="assets/apartamentos/04.webp" alt="Prague apartaments">
                         <div>
                             <h5>3 Epoques Apartments by Prague Residences</h5>
                             <p>Praga 1, República Tcheca, Praha 1</p>
@@ -370,7 +370,7 @@
             </ul>
         </div>
     </section>
-    <section>
+    <section class="news-letter">
         <h2>Economize tempo, economize dinheiro!</h2>
         <p>Inscreva-se e enviaremos as melhores ofertas para você</p>
         <form>
