--- a/index.html
+++ b/index.html
@@ -88,29 +88,27 @@
         </div>
     </section>
     <div class="container">
-            <form id="form-filter">
-                <div id="form-filter-content">
-                    <div class="field">
-                        <input type="text" name="destino" placeholder="Para onde você vai?">
-                    </div>
-                    <div class="field">
-                        <button type="button">Data de check in - Data de check-out</button>
-                    </div>
-                    <div class="field">
-                        <button type="button">2 adultos - 0 criança - 1 quarto</button>
-                    </div>
-                    <button type="submit">Pesquisar</button>
+        <form id="form-filter">
+            <div id="form-filter-content">
+                <div class="field">
+                    <input type="text" name="destino" placeholder="Para onde você vai?">
                 </div>
-        <div id="work-option">
-            <input type="checkbox" value="trabalho" name="viagemTrabalho" id="viagemTrabalho">
-            <label for="viagemTrabalho">Vou viajar a trabalho</label>
-        </div>
-
+                <div class="field">
+                    <button type="button">Data de check in - Data de check-out</button>
+                </div>
+                <div class="field">
+                    <button type="button">2 adultos - 0 criança - 1 quarto</button>
+                </div>
+                <button type="submit">Pesquisar</button>
+            </div>
+            <div id="work-option">
+                <input type="checkbox" value="trabalho" name="viagemTrabalho" id="viagemTrabalho">
+                <label for="viagemTrabalho">Vou viajar a trabalho</label>
+            </div>
         </form>
-        
     </div>
 
-    <div class="container , info" >
+    <div class="container info">
         <img src="assets/icons/descanso.svg" alt="Informações">
         <p>
             Leia as recomendações necessárias. Confira as últimas restrições
@@ -119,7 +117,7 @@
         </p>
     </div>
 
-    <article class="container , offers">
+    <article class="container offers">
         <h2>Ofertas</h2>
         <p>Promoções e ofertas especiais para você</p>
 
@@ -309,7 +307,7 @@
             <ul class="list list-residences">
                 <li>
                     <a href="https://www.booking.com/searchresults.html?aid=397594">
-                        <img src="assets/apartamentos/01.webp" alt="Prague residence">
+                        <img src="https://cf.bstatic.com/xdata/images/hotel/square600/13125860.webp?k=e148feeb802ac3d28d1391dad9e4cf1e12d9231f897d0b53ca067bde8a9d3355&o=&s=1" alt="Prague residence">
                         <div>
                             <h5>6 Continents Apartments by Prague</h5>
                             <p>Praga 1, República Tcheca, Prague</p>
@@ -324,7 +322,7 @@
                 </li>
                 <li>
                     <a href="https://www.booking.com/searchresults.html?aid=397594">
-                        <img src="assets/apartamentos/02.webp" alt="Budapest">
+                        <img src="assets/casas_E_Aps/zoku.webp" alt="Budapest">
                         <div>
                             <h5>7Seasons Apartments Budapest</h5>
                             <p>06. Terézváros, Hungria, Budapest</p>
@@ -339,7 +337,7 @@
                 </li>
                 <li>
                     <a href="https://www.booking.com/searchresults.html?aid=397594">
-                        <img src="assets/apartamentos/03.webp" alt="Miasto">
+                        <img src="assets/casas_E_Aps/p&j.webp" alt="Miasto">
                         <div>
                             <h5>7Seasons Apartments Budapest</h5>
                             <p>06. Terézváros, Hungria, Budapest</p>
@@ -354,7 +352,7 @@
                 </li>
                 <li>
                     <a href="https://www.booking.com/searchresults.html?aid=397594">
-                        <img src="assets/apartamentos/04.webp" alt="Prague apartaments">
+                        <img src="assets/casas_E_Aps/prague.webp" alt="Prague apartaments">
                         <div>
                             <h5>3 Epoques Apartments by Prague Residences</h5>
                             <p>Praga 1, República Tcheca, Praha 1</p>
@@ -378,13 +376,13 @@
             <input type="submit" value="Inscreva-se">
         </form>
     </section>
-    <div>
+    <div id="sales">
         <button>
             <a href="https://join.booking.com/?lang=pt-br">
                 Anuncie sua propriedade
             </a>
         </button>
-        <div>
+        <div id="sales-options">
             <ul>
                 <li>
                     <a href="https://account.booking.com/sign-in">
@@ -418,7 +416,7 @@
         </div>
     </div>
     <footer>
-        <div>
+        <div class="footer-option">
             <ul>
                 <li>
                     <a href="https://www.booking.com/country.pt-br.html">
